--- a/assets/admin/css/style.less
+++ b/assets/admin/css/style.less
@@ -9,12 +9,16 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-right: 15px;
+  box-sizing: border-box;
+  padding: 10px 25px;
+  border-bottom: 1px dotted #888;
 }
 
 .wptinker-wrapper {
   display: flex;
   height: 100%;
+  box-sizing: border-box;
+  padding: 10px 25px;
 
   .input {
     min-width: 50%;
@@ -32,7 +36,7 @@
   .input textarea {
     background: #ddd;
     padding: 15px;
-    height: calc(100vh - 150px);
+    height: calc(100vh - 200px);
 
     &:focus {
       box-shadow: none;
@@ -43,6 +47,10 @@
     flex-grow: 1;
     margin-left: 20px;
     overflow: auto;
+
+    pre{
+      max-height: calc( 100vh - 200px );
+    }
 
     .tabs {
       display: flex;
