--- a/assets/admin/css/style.less
+++ b/assets/admin/css/style.less
@@ -12,6 +12,17 @@
   box-sizing: border-box;
   padding: 10px 25px;
   border-bottom: 1px dotted #888;
+
+  .wp-tinker-config{
+    display: flex;
+    gap: 20px;
+
+    .wp-tinker-update-info{
+      display: flex;
+      align-items: center;
+      gap: 10px;
+    }
+  }
 }
 
 .wptinker-wrapper {
