--- a/assets/admin/css/style.less
+++ b/assets/admin/css/style.less
@@ -13,6 +13,11 @@
   padding: 10px 25px;
   border-bottom: 1px dotted #888;
 
+  .snapcode-title{
+    h2{
+      margin: 10px 0;
+    }
+  }
   .wp-tinker-config{
     display: flex;
     gap: 20px;
@@ -145,5 +150,19 @@
   .output pre,
   .input textarea {
     font-family: "FiraCode" !important;
+  }
+}
+
+.snapcode-settings-content{
+  p{
+    margin-bottom: 2px;
+  }
+  input{
+    width: 100%;
+  }
+
+  .btn-snapcode-save-settings{
+    margin-top: 24px;
+    float: right;
   }
 }
