fixes and improvements

--- a/assets/admin/css/style.css
+++ b/assets/admin/css/style.css
@@ -80,8 +80,11 @@
   margin-left: 20px;
   overflow: auto;
 }
-.wptinker-wrapper .output pre {
-  max-height: calc(100vh - 200px);
+.wptinker-wrapper .output .output-code,
+.wptinker-wrapper .output .output-sql {
+  margin-top: 10px;
+  max-height: calc(100vh - 210px);
+  overflow: scroll;
 }
 .wptinker-wrapper .output .tabs {
   display: flex;
