--- a/assets/admin/css/style.less
+++ b/assets/admin/css/style.less
@@ -97,8 +97,11 @@
     margin-left: 20px;
     overflow: auto;
 
-    pre{
-      max-height: calc( 100vh - 200px );
+    .output-code,
+    .output-sql {
+      margin-top: 10px;
+      max-height: calc( 100vh - 210px );
+      overflow: scroll;
     }
 
     .tabs {
