--- a/assets/admin/css/style.less
+++ b/assets/admin/css/style.less
@@ -18,9 +18,18 @@
       margin: 10px 0;
     }
   }
+
   .wp-tinker-config{
     display: flex;
     gap: 20px;
+    align-items: center;
+
+    .snapcode-icon-button{
+      display: flex;
+      gap: 6px;
+      align-items: center;
+      cursor: pointer;
+    }
 
     .wp-tinker-update-info{
       display: flex;
