--- a/assets/admin/css/style.less
+++ b/assets/admin/css/style.less
@@ -86,6 +86,7 @@
 
 .wptinker-wrapper {
   display: flex;
+  transition: flex-direction 0.5s ease;
   height: 100%;
   box-sizing: border-box;
   padding: 10px 25px;
@@ -126,17 +127,7 @@
   .input {
     min-width: 50%;
     position: relative;
-  }
-
-  .input textarea {
-    background: #ddd;
-    padding: 15px;
-    // height: calc(100vh - 240px);
-    resize: horizontal;
-
-    &:focus {
-      box-shadow: none;
-    }
+    view-transition-name: input;
   }
 
   .output {
@@ -144,6 +135,7 @@
     margin-left: 20px;
     overflow: auto;
     position: relative;
+    view-transition-name: output;
 
     .snapcode-performance {
       color: #888;
@@ -223,6 +215,12 @@
       }
     }
   }
+}
+
+::view-transition-group(input),
+::view-transition-group(output) {
+  animation-duration: 0.5s;
+  animation-timing-function: ease-in-out;
 }
 
 .snapcode-settings-content {
